--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,6 @@ steps:
    args: ['push', 'us-central1-docker.pkg.dev/${PROJECT_ID}/challenge3-repo/challenge3-image']
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
    entrypoint: 'gcloud'
-   args: ['run', 'deploy', 'create-with-container', 'my-vm-name', '--container-image', 'us-central1-docker.pkg.dev/${PROJECT_ID}/my-docker-repo/my-image']
-   env:
+   args: ['run', 'deploy', 'challenge3-app', '--image=', 'us-central1-docker.pkg.dev/${PROJECT_ID}/challenge3-repo/challenge3-image', '--ingress=all', '--allow-unauthenticated', '--vpc-connector', '']
 images:
 - 'us-central1-docker.pkg.dev/$PROJECT_ID/challenge3-repo/challenge3-image:latest'
